changed overflow issue

--- a/_assets/stylesheets/_article.scss
+++ b/_assets/stylesheets/_article.scss
@@ -397,7 +397,7 @@ input[name='panel']:checked ~ .accordion__content.accordion__content--large {
 
 .section-background {
     height: 370px;
-    width: max(100%, 2000px);
+    width: max(100%, 1450px);
     background-color:rgba(#36454f, 1);
     position: relative;
     float: left;
