--- a/_assets/stylesheets/_codenight.scss
+++ b/_assets/stylesheets/_codenight.scss
@@ -4,7 +4,7 @@
 
 .code-at-night-background {
     height: 850px;
-    width: max(100%, 2000px);
+    width: max(100%, 1450px);
     background-color:rgba(#36454f, 1);
     position: relative;
     animation-name: backgroundfade;
@@ -53,7 +53,7 @@
 .code-at-night-background-2 {
     height: auto;
     padding-bottom: 75px;
-    width: max(100%, 2000px);
+    width: max(100%, 1450px);
     background-color:rgba(#36454f, 1);
     position: relative;
     animation-name: backgroundfade;
