--- a/_assets/stylesheets/_nav.scss
+++ b/_assets/stylesheets/_nav.scss
@@ -39,7 +39,7 @@
 
   #cssmenu {
     display: inline-block;
-    width: 1000px;
+    width: 870px;
   }
 
   #navigation {
